CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

SET(PROJECT_NAME NumberToWord)
SET(SOURCE_FILES main.cpp Number2Word.cpp LookupEnglish.cpp)

SET(CMAKE_CXX_STANDARD 17)

PROJECT(
    ${PROJECT_NAME}
    VERSION 0.1
    DESCRIPTION "Transform a number to a word"
    LANGUAGES CXX
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME})

TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC -Wall -Werror)
